# My2FA

./: .gitignore  CMakeLists.txt
src/Auth_Layer/: AuthManager.cpp  AuthManager.hpp  Database_Test.cpp
src/Command_Layer/: Command.hpp  CommandFactory.cpp  CommandFactory.hpp  Context.hpp  ServerContext.hpp
src/Command_Layer/Base/: Command.hpp  CommandTypes.hpp  EntityType.hpp
src/Command_Layer/Code_Login/: CodeLoginCommands.hpp  CodeResponseCommand.cpp  CodeResponseCommand.hpp  ExitSCSCommand.cpp  ExitSCSCommand.hpp  RequestCodeClientCommand.cpp  RequestCodeClientCommand.hpp  ValidateCodeClientCommand.hpp  ValidateCodeServerCommand.hpp  ValidateResponseClientCommand.hpp  ValidateResponseServerCommand.hpp
src/Command_Layer/Credential_Login/: CredentialLoginCommands.hpp  CredentialRequestCommand.cpp  CredentialRequestCommand.hpp  LoginRequestCommand.cpp  LoginRequestCommand.hpp  LoginResponseCommand.cpp  LoginResponseCommand.hpp  LogoutRequestCommand.cpp  LogoutRequestCommand.hpp
src/Command_Layer/Notification_Login/: NotificationLoginCommands.hpp  NotificationResponseClientCommand.hpp  NotificationResponseServerCommand.hpp  RequestNotificationClientCommand.hpp  RequestNotificationCommand.cpp  RequestNotificationCommand.hpp  RequestNotificationServerCommand.hpp  SendNotificationCommand.cpp  SendNotificationCommand.hpp
src/Command_Layer/System_Commands/: ConnCommand.hpp  ConnectCommand.cpp  ConnectCommand.hpp  ErrCommand.hpp  ErrorCommand.cpp  ErrorCommand.hpp  GenericResponseCommand.cpp  GenericResponseCommand.hpp  PairCommand.cpp  PairCommand.hpp  PingCommand.hpp  SystemCommands.hpp
src/Connection_Layer/: ClientConnectionHandler.hpp  ServerConnectionHandler.cpp  ServerConnectionHandler.hpp
src/Database_Layer/: Database.cpp  Database.hpp
src/Database_Layer/dbs/: as.db  ds_app1.db  ds_app2.db
src/Dummy_Client/: DummyClient.cpp
src/Dummy_Server/: DummyServer.cpp
src/My2FA_Client/: 2FAClient.cpp  AuthClient.cpp
src/My2FA_Server/: 2FAServer.cpp  AuthServer.cpp  server  server.cpp
src/Session_Manager/: SessionManager.cpp  SessionManager.hpp
src/TOTP_Layer/: TOTPGenerator.cpp  TOTPGenerator.hpp  TOTPManager.cpp  TOTPManager.hpp
src/Test_Client/: TestClient.cpp
